--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "base64-js": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "binary-extensions": "^2.2.0",
-    "body-parser": "^1.19.1",
+    "body-parser": "^1.20.2",
     "boxen": "^5.1.2",
     "brace-expansion": "^1.1.11",
     "braces": "^3.0.2",
@@ -39,6 +39,7 @@
     "content-type": "^1.0.4",
     "cookie": "^0.4.1",
     "cookie-signature": "^1.0.6",
+    "crypto": "^1.0.1",
     "crypto-random-string": "^2.0.0",
     "debug": "^2.6.9",
     "decompress-response": "^3.3.0",
@@ -59,9 +60,9 @@
     "escape-html": "^1.0.3",
     "escape-string-regexp": "^1.0.5",
     "etag": "^1.8.1",
-    "express": "^4.17.2",
+    "express": "^4.19.2",
     "express-ejs-layouts": "^2.5.1",
-    "express-session": "^1.17.2",
+    "express-session": "^1.18.0",
     "filelist": "^1.0.2",
     "fill-range": "^7.0.1",
     "finalhandler": "^1.1.2",
@@ -122,6 +123,7 @@
     "mquery": "^4.0.0",
     "ms": "^2.0.0",
     "negotiator": "^0.6.2",
+    "nodemailer": "^6.9.13",
     "nodemon": "^2.0.15",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
@@ -132,7 +134,7 @@
     "p-cancelable": "^1.1.0",
     "package-json": "^6.5.0",
     "parseurl": "^1.3.3",
-    "passport": "^0.5.2",
+    "passport": "^0.5.3",
     "passport-local": "^1.0.0",
     "passport-strategy": "^1.0.0",
     "path-to-regexp": "^0.1.7",
@@ -166,6 +168,7 @@
     "signal-exit": "^3.0.6",
     "sliced": "^1.0.1",
     "sparse-bitfield": "^3.0.3",
+    "speakeasy": "^2.0.0",
     "statuses": "^1.5.0",
     "string-width": "^4.2.3",
     "strip-ansi": "^6.0.1",
@@ -176,6 +179,7 @@
     "toidentifier": "^1.0.1",
     "touch": "^3.1.0",
     "tr46": "^3.0.0",
+    "twilio": "^5.1.0",
     "type-fest": "^0.20.2",
     "type-is": "^1.6.18",
     "typedarray-to-buffer": "^3.1.5",
