--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "bcryptjs": "^2.4.3",
     "binary-extensions": "^2.2.0",
     "body-parser": "^1.20.2",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "boxen": "^5.1.2",
     "brace-expansion": "^1.1.11",
     "braces": "^3.0.2",
@@ -66,6 +68,8 @@
     "filelist": "^1.0.2",
     "fill-range": "^7.0.1",
     "finalhandler": "^1.1.2",
+    "firebase": "^10.12.2",
+    "firebase-admin": "^12.1.1",
     "forwarded": "^0.2.0",
     "fresh": "^0.5.2",
     "get-stream": "^4.1.0",
