--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 MONGO_URI=mongodb+srv://swapnilmishra870:Mishra%401234@nourish.f6dyvyy.mongodb.net/Nourish
 ADMIN_SECURITY_KEY=123456789
-EMAIL=swapnil.mishra870@gmail.com
-EMAIL_PASSWORD=cton vnua bzpv rnhz
+EMAIL=nourish54321@gmail.com
+EMAIL_PASSWORD=wvfk msqn tphp eubj
 OTP_SECRET=KVKFKRCPNZQUYMLXOVYDSQKJKZDTSRLD
 FIREBASE_API_KEY=AIzaSyAfJJoC7NyEyZeSScgjQT-4ScxcFdzz7NI
 FIREBASE_AUTH_DOMAIN=food-donation-system-1f45f.firebaseapp.com
